Fixed scroll bar bug by adding CSS overflow-y: hidden.

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
     width: 250px;
     height: 250px;
     margin: 20px;
-    overflow: auto;
+    overflow-y: hidden;
     opacity: 0.85;
     transition: 0.3s;
   }
@@ -173,21 +173,7 @@ body {
     border: 0 none;
     opacity: 0.8;
   }
-  
-  .work h3 {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 0;
-    font-weight: 300;
-    line-height: 30px;
-    color: #ffffff;
-    text-align: center;
-    background: #c74747;
-    border-bottom: 0;
-  }
-  
+    
   .auth-image {
     float: left;
     width: 200px;
@@ -241,7 +227,7 @@ body {
       z-index: 99;
       width: 100%;
       margin: 0 0 30px;
-      overflow: auto;
+      overflow-y: hidden;
       color: #ffffff;
       background: #ffffff;
       border-bottom: 2px solid #cccccc;
@@ -275,6 +261,7 @@ body {
       text-align: center;
     }
   }
+
   @media screen and (max-width: 768px){
     #masthead {
       position: fixed;
